PandaDuck Pix를 PandaDuck Fix로 브랜드명 변경

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <meta name="theme-color" content="#000000" />
       <meta name="apple-mobile-web-app-capable" content="yes" />
       <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-      <meta name="apple-mobile-web-app-title" content="PandaDuck Pix" />
+      <meta name="apple-mobile-web-app-title" content="PandaDuck Fix" />
 
-      <title>PandaDuck Pix - 게임패드 수리 서비스</title>
+      <title>PandaDuck Fix - 게임패드 수리 서비스</title>
 
       <!-- PWA Manifest -->
       <link rel="manifest" href="/manifest.json" />
